style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,500&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

:root {
    --bgColor: #15202B;
    --darkBtn: #0B1218;
    --whiteColor: #fff;
}

body {
    background-color: var(--bgColor);
    
}

html {
    scroll-behavior: smooth;
}

.navBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2rem;
    position: relative;
}

.navBar img {
    width:80%;
    max-width: 400px;
    height:auto;
    color: var(--whiteColor);
}

.hamburger {
    cursor: pointer;
    z-index:1;
}

.line {
    width:25px;
    height: 3px;
    background-color: var(--whiteColor);
    margin: 4px;
    transition: all .5s ease-in-out;
}
.hamburger.active {
    color: #000
}

.hamburger.active .line:nth-child(2){
    opacity:0;
    
}
.hamburger.active .line:nth-child(1){
    background-color: #000;
    transform: translateY(8px) rotate(45deg);
    transition: all .2s ease-in-out;
    height:4px;
}
.hamburger.active .line:nth-child(3){
    background-color: #000;
    transform: translateY(-8px) rotate(-45deg);
    transition: all .2s ease-in-out;
    height:4px;
}

.navLinks {
    background-color: #fff;
    
    height:100vh;
    width:100vw;
    position: absolute;
    transition: .5s ease-in-out;
    top:0;
    right: -100%;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items:flex-start;
}

.navLinks.active {
    transition: .5s ease-in-out;
    right:0%;
}


.navLinks li{
    color: #000;
    list-style: none;
    padding: 20px 0px;
}

.navLinks li a{
    color: #000;
    text-decoration: none;
    font-weight: 500;
    font-size: 2rem;
}



.navLinksDesktop {
    display: none;
}

.fa-brands {
    color: var(--whiteColor);
}

/*NAVLINKS RESPONSIVE****************************************/

@media (min-width:868px) {
    .navLinks {
        display: none;
    }
    .hamburger{
        display: none;
    }
    .navLinksDesktop {
        display: block;
        display: flex;
        padding: 0px 20px;
        gap: 20px;
    }
    .navLinksDesktop li {
        list-style: none;
    }
    .navLinksDesktop li a {
        text-decoration: none;
        color: var(--whiteColor);
        font-size: 1.1rem;
    }
    .navBar {
        padding: 2rem 3rem;
    }
    .spanOne {
        opacity: 100%;
        transition: opacity .5s ease-in-out;
        animation-delay: 250ms;
    }
    
    .navLinksDesktop li a:hover > .spanOne {
        opacity: 0%;
        transition: all .1s ease-in-out;
    }
    .navLinksDesktop li a:hover > .spanTwo {
        opacity: 0%;
        transition: opacity .5s ease-in-out;
        animation-delay: 250ms;
    }
    
}


/*WRAPPER***************************************/
.wrapper {
    padding: 2rem;
}
/*WRAPPER RESPONSIVE****************************************/
@media (min-width:400px) {
    .wrapper {
        width:0vw; /*95vw this*/
        margin: 0 auto;
        border: 1px solid var(--whiteColor);
        overflow: hidden;
        padding: 0rem; /*3rem*/
    }
}

/*HERO SECTION****************************************/

.hero {
    height: 100vh;
}

.heroTitle {
    /* padding: 20rem 5rem; */
    width:100%;
    max-width: 3000px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 15rem 0rem 0rem 0rem
}
.title, .subTitle {
    position: relative;
    color: var(--whiteColor);
    z-index: -1;
}
.title {
    font-size: clamp(4rem, 5vw, 8rem);
    font-weight: 600;
    margin-bottom: 20px;
}

.subTitle {
    font-size: clamp(1.5rem, 2vw, 4rem);
    display: flex;
    flex-direction: column;
    line-height: 40px;
    margin-bottom: 10px;
}
.subTitleIcons {
    font-size: 2rem;
    
}
.subTitleIcons .fa-brands {
    padding: 0px 5px;
    cursor: pointer;
}


/*ABOUT ME*******************************************/

.aboutMeTitle p, .projectsTitle p {
    color: var(--whiteColor);
    font-size: 4rem;
    font-weight: 600;
    position: relative;
}

.aboutLine {
    width:0%;
    height: 2px;
    background-color: var(--whiteColor);
}
.projectLine {
    width:0%;
    height: 2px;
    background-color: var(--whiteColor);
}

.aboutMeText {
    color: var(--whiteColor);
    line-height: 30px;
    padding-top: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 60px;
    font-size: 1.2rem;
    line-height: 35px;

}
.aboutMeText p {
    max-width: 400px;
}

.aboutMeImg {
    padding: 40px 0px;
}

.aboutMeImg img{
    width: 100%;
    max-width: 300px;
}

.aboutBtn {
    border: none;
    padding: .8rem 2rem;
    background-color: var(--darkBtn);
    color: var(--whiteColor);
    cursor: pointer;
    margin-top: 20px;
    font-weight: 600;
}

/*ABOUT ME RESPONSIVE*******************************************/
@media (min-width:1200px) {
    .aboutMeText {
        display: flex;
        flex-direction: row;
    }
    .aboutMeTitle p, .projectsTitle p {
        padding-left: 10rem;
    }
    .aboutLine {
        width:0%;
        margin-left: 10rem;
    }
    .projectLine {
        width:0%;
        margin-left: 10rem;
    }
}


/*STACK REMAKE*******************************************/

.stack {
    display: flex;
    justify-content: center;
    align-items: center;
    width:100%;
    padding-top: 10rem;
    padding-bottom: 15rem;
}

.Parent {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(15rem, 2fr));
    column-gap: 100px;
    row-gap: 75px;
    width:70%;
}
  
.div1 { grid-area: 1 / 1 / 2 / 2; }
.div2 { grid-area: 2 / 1 / 3 / 2; }
.div3 { grid-area: 3 / 1 / 4 / 2; }
.div4 { grid-area: 4 / 1 / 5 / 2; }
.div5 { grid-area: 1 / 2 / 2 / 3; }
.div6 { grid-area: 2 / 2 / 3 / 3; }
  
  
  
  
.card {
    width:100%;
    display: flex;
    color: #fff;

}
/* ... */

